<resources>
    <string name="app_name">Tài Xỉu FBT</string>
    <string name="title_home">Trang Chủ</string>
    <string name="title_sport">Thể Thao</string>
    <string name="title_moneyIn">Nạp Tiền</string>
    <string name="title_moneyOut">Rút Tiền</string>
    <string name="title_care">CSKH</string>
    <string name="title_shop">Dại Lý</string>
    <string name="title_promo">Khuyến Mãi</string>
    <string name="title_account">Cá Nhân</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgot">Forgot Password</string>
    <string name="title_verify">Verify</string>
    <string name="title_reset">Reset Password</string>
    <string name="title_change">Change Password</string>
    <string name="title_30s">30 Giây</string>
    <string name="title_60s">60 Giây</string>
    <string name="title_2p">2 Phút</string>
    <string name="title_5p">5 Phút</string>
    <string name="title_10p">10 Phút</string>
    <string name="title_baccarat">Baccarat</string>
    <string name="title_change_info">Đổi thông tin người dùng</string>
    <string name="title_support">Chăm sóc khách hàng</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome To TaiXiuFBT !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username\n</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="usernameField">"Current Username: %1$s"</string>
    <string name="moneyField">"Current money: %1$d"</string>
    <string name="currentId">%1$d</string>
    <string name="fullnameField">Full Name:%1$s</string>
    <string name="fullname_hint">Enter Fullname</string>
    <string name="username_hint">Enter username\n</string>
    <string name="password_hint">Enter password</string>
    <string name="email_hint">Enter email</string>
    <string name="phone_hint">Enter phone</string>
    <string name="register_button_text">REGISTER</string>
    <string name="currentMoney">%1$d</string>
    <string name="curentRole">%1$d</string>
    <string name="selected_game_profile">"Selected Game Profile: %1$s"</string>
    <string name="active_game_profile">"Active game profile: %1$s"</string>
    <string name="currentGPid">%1$d</string>
</resources>